--- a/src/app/admin/adminheader/adminheader.component.html
+++ b/src/app/admin/adminheader/adminheader.component.html
@@ -1,6 +1,6 @@
 <div class="header">
     <div class="header-left">
-        <a href="index-2.html" class="logo">
+        <a routerLink="../admindashboard" class="logo">
             <img src="assets/img/panel_icon.png" width="35" height="35" alt=""> <span>Leavemgt</span>
         </a>
     </div>
@@ -20,8 +20,8 @@
            
         </li>
 
-        <li class="nav-item dropdown d-none d-sm-block">
-            <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown"><i class="fas fa-power-off"></i></a>
+        <li class="nav-item">
+            <a routerLink="/" class=" nav-link"><i class="fas fa-power-off"></i></a>
         </li>&nbsp;&nbsp;
        
     </ul>
