--- a/src/app/admin/adminsidebar/adminsidebar.component.html
+++ b/src/app/admin/adminsidebar/adminsidebar.component.html
@@ -8,7 +8,7 @@
                     <a routerLink="../admindashboard"><i class="fas fa-tachometer-alt"></i> <span>Dashboard</span></a>
                 </li>
                 <li>
-                    <a routerLink="../adminrole"><i class="far fa-sun"></i> <span>Role</span></a>
+                    <a routerLink="../adminrole"><i class="fas fa-user-tie"></i> <span>Role</span></a>
                 </li>
                 <li>
                     <a routerLink="../admindepartment"><i class="fas fa-home"></i> <span>Department</span></a>
@@ -24,6 +24,9 @@
                 </li>
                 <li>
                     <a routerLink="../adminfacultylist"><i class="fas fa-users"></i> <span>Faculty</span></a>
+                </li>
+                <li>
+                    <a routerLink="../adminsettings"><i class="far fa-sun"></i> <span>Settings</span></a>
                 </li>
                 
             </ul>
