--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -33,7 +33,7 @@
            
             <div class="card">
                 <div class="card-header">
-                    <h4 class="card-title d-inline-block"><b>Admin Dashboard ????</b></h4>
+                    <h4 class="card-title d-inline-block"><b style="font-weight: 500;">Admin Dashboard</b></h4>
                 </div>
                 <div class="row">
                     <div class="col">
@@ -61,21 +61,12 @@
                                     aria-hidden="true"></i></span>
                             <div class="dash-widget-info text-right">
                                 <h3>72</h3>
-                                <span class="widget-title3">????? <i class="fa fa-check"
+                                <span class="widget-title3">Pending Approval <i class="fa fa-check"
                                         aria-hidden="true"></i></span>
                             </div>
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="dash-widget">
-                            <span class="dash-widget-bg4"><i class="far fa-calendar-times"
-                                    aria-hidden="true"></i></span>
-                            <div class="dash-widget-info text-right">
-                                <h3>618</h3>
-                                <span class="widget-title4">????? <i class="fa fa-check" aria-hidden="true"></i></span>
-                            </div>
-                        </div>
-                    </div>
+                    
                 </div>
 
 
