--- a/src/app/admin/facultylist/facultylist.component.html
+++ b/src/app/admin/facultylist/facultylist.component.html
@@ -10,7 +10,7 @@
                     <div class="card">
 
                         <div class="card-header">
-                            <h4 class="card-title d-inline-block">Faculties</h4> 
+                            <h4 class="card-title d-inline-block"><b style="font-weight: 500;">Faculties</b></h4> 
                         </div>
                         <div class="card-body p-0">
                             <div class="table-responsive">
@@ -36,7 +36,17 @@
                                             <td>devesh120@gmail.com</td>
                                             <td>Ahmedabad</td>
                                             <td>Faculty</td>
-                                            <td><span class="custom-badge status-red">Inactive</span></td>
+                                            <td>
+                                                <div class="dropdown action-label">
+                                                    <a class="custom-badge status-green dropdown-toggle" href="#" data-toggle="dropdown" aria-expanded="false">
+                                                        Active
+                                                    </a>
+                                                    <div class="dropdown-menu dropdown-menu-right" x-placement="bottom-end" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(103px, 22px, 0px);">
+                                                        <a href="#" class="dropdown-item">Active</a>
+                                                        <a href="#" class="dropdown-item">Inactive</a>
+                                                    </div>
+                                                </div>
+                                            </td>
                                             <td>
                                                 <a routerLink="../adminedituser"> <i class="fas fa-edit" style="color: lightseagreen;"></i>
                                                 </a> | <a href=""> <i class="fas fa-trash-alt" style="color: red;"></i>
@@ -51,7 +61,17 @@
                                             <td>devesh120@gmail.com</td>
                                             <td>Ahmedabad</td>
                                             <td>Faculty</td>
-                                            <td><span class="custom-badge status-green">Active</span></td>
+                                            <td>
+                                                <div class="dropdown action-label">
+                                                    <a class="custom-badge status-green dropdown-toggle" href="#" data-toggle="dropdown" aria-expanded="false">
+                                                        Active
+                                                    </a>
+                                                    <div class="dropdown-menu dropdown-menu-right" x-placement="bottom-end" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(103px, 22px, 0px);">
+                                                        <a href="#" class="dropdown-item">Active</a>
+                                                        <a href="#" class="dropdown-item">Inactive</a>
+                                                    </div>
+                                                </div>
+                                            </td>
                                             <td>
                                                 <a routerLink="../adminedituser"> <i class="fas fa-edit" style="color: lightseagreen;"></i>
                                                 </a> | <a href=""> <i class="fas fa-trash-alt" style="color: red;"></i>
