--- a/src/app/admin/giveapproval/giveapproval.component.html
+++ b/src/app/admin/giveapproval/giveapproval.component.html
@@ -67,12 +67,12 @@
                     <div class="card">
 
                         <div class="card-header">
-                            <h4 class="card-title d-inline-block">Give Approval</h4>
+                            <h4 class="card-title d-inline-block"><b style="font-weight: 500;">Give Approval</b></h4>
                         </div>
                         <table datatable [dtOptions]="dtOptions" class="row-border hover">
                             <thead>
                                 <tr>
-                                    <th>Student</th>
+                                    <th>Faculty</th>
                                     <th>Leave Type</th>
                                     <th>Leave Start</th>
                                     <th>Leave End</th>
