--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -9,7 +9,7 @@
                     <div class="card">
 
                         <div class="card-header">
-                            <h4 class="card-title d-inline-block">Users</h4> <a routerLink="../adminadduser"><button
+                            <h4 class="card-title d-inline-block"><b style="font-weight: 500;">Users</b></h4> <a routerLink="../adminadduser"><button
                                     class="btn btn-primary float-right">Add
                                     Users</button></a>
                         </div>
@@ -37,9 +37,23 @@
                                             <td>devesh120@gmail.com</td>
                                             <td>Ahmedabad</td>
                                             <td>Student</td>
-                                            <td><span class="custom-badge status-red">Inactive</span></td>
                                             <td>
-                                                <a routerLink="../adminedituser"> <i class="fas fa-edit" style="color: lightseagreen;"></i>
+                                                <div class="dropdown action-label">
+                                                    <a class="custom-badge status-green dropdown-toggle" href="#"
+                                                        data-toggle="dropdown" aria-expanded="false">
+                                                        Active
+                                                    </a>
+                                                    <div class="dropdown-menu dropdown-menu-right"
+                                                        x-placement="bottom-end"
+                                                        style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(103px, 22px, 0px);">
+                                                        <a href="#" class="dropdown-item">Active</a>
+                                                        <a href="#" class="dropdown-item">Inactive</a>
+                                                    </div>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <a routerLink="../adminedituser"> <i class="fas fa-edit"
+                                                        style="color: lightseagreen;"></i>
                                                 </a> | <a href=""> <i class="fas fa-trash-alt" style="color: red;"></i>
                                                 </a>
                                             </td>
@@ -52,7 +66,20 @@
                                             <td>devesh120@gmail.com</td>
                                             <td>Ahmedabad</td>
                                             <td>Student</td>
-                                            <td><span class="custom-badge status-green">Active</span></td>
+                                            <td>
+                                                <div class="dropdown action-label">
+                                                    <a class="custom-badge status-red dropdown-toggle" href="#"
+                                                        data-toggle="dropdown" aria-expanded="false">
+                                                        Inactive
+                                                    </a>
+                                                    <div class="dropdown-menu dropdown-menu-right"
+                                                        x-placement="bottom-end"
+                                                        style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(103px, 22px, 0px);">
+                                                        <a href="#" class="dropdown-item">Active</a>
+                                                        <a href="#" class="dropdown-item">Inactive</a>
+                                                    </div>
+                                                </div>
+                                            </td>
                                             <td>
                                                 <a href=""> <i class="fas fa-edit" style="color: lightseagreen;"></i>
                                                 </a> | <a href=""> <i class="fas fa-trash-alt" style="color: red;"></i>
