--- a/src/app/classteacher/dashboard/dashboard.component.html
+++ b/src/app/classteacher/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
             <!-- Class Teacher Dashboard -->
             <div class="card">
                 <div class="card-header">
-                    <h4 class="card-title d-inline-block"><b>Class Teacher Dashboard</b></h4>
+                    <h4 class="card-title d-inline-block"><b style="font-weight: 500;">Class Teacher Dashboard</b></h4>
                 </div>
                 <div class="row">
                     <div class="col">
@@ -58,7 +58,7 @@
                     <div class="col-12 col-md-6 col-lg-4 col-xl-12">
                         <div class="card">
                             <div class="card-header">
-                                <h4 class="card-title d-inline-block">Give Approval</h4> <a routerLink="./leaves"
+                                <h4 class="card-title d-inline-block"><b style="font-weight: 500;">Give Approval</b></h4> <a routerLink="../ctgiveapproval"
                                     class="btn btn-primary float-right">View all</a>
                             </div>
                             <div class="card-body p-0">
