--- a/src/app/classteacher/giveapproval/giveapproval.component.html
+++ b/src/app/classteacher/giveapproval/giveapproval.component.html
@@ -6,7 +6,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <h4 class="card-title d-inline-block"><b>Give Approval</b></h4>
+                    <h4 class="card-title d-inline-block"><b style="font-weight: 500;">Give Approval</b></h4>
                 </div>
 
                 <div class="row">
@@ -109,35 +109,6 @@
                                                     </div>
                                                 </td>
                                             </tr>
-
-                                            <tr>
-                                                <td>201801619010094</td>
-                                                <td>Aryan</td>
-                                                <td>asd</td>
-                                                <td>12-Dec-2022</td>
-                                                <td>12-Dec-2022</td>
-                                                <td>hello my name is devesh sheth</td>
-                                                <td><span class="pending">Pending</span></td>
-                                                <td>
-                                                    <a href="#" class="action-icon dropdown-toggle"
-                                                        data-toggle="dropdown" aria-expanded="false"><i
-                                                            class="fa fa-ellipsis-v"></i></a>
-                                                    <div class="dropdown-menu dropdown-menu-right">
-                                                        <a class="dropdown-item"><i
-                                                                class="far fa-edit"></i>&nbsp;Edit</a>
-                                                        <a class="dropdown-item"><i
-                                                                class="fas fa-check"></i>&nbsp;Accept</a>
-                                                        <a class="dropdown-item"><i class="fas fa-trash"
-                                                                data-toggle="modal"
-                                                                data-target="#myModal"></i>&nbsp;Reject</a>
-                                                        <a class="dropdown-item" data-toggle="modal"
-                                                            data-target="#myModal1"><i
-                                                                class="far fa-file-alt"></i>&nbsp;Details</a>
-                                                    </div>
-                                                </td>
-                                            </tr>
-
-
                                         </tbody>
                                     </table>
                                 </div>
