--- a/src/app/classteacher/student/student.component.html
+++ b/src/app/classteacher/student/student.component.html
@@ -9,7 +9,7 @@
                     <div class="card">
 
                         <div class="card-header">
-                            <h4 class="card-title d-inline-block">Students</h4>  <a routerLink="../ctaddstudent"><button class="btn btn-primary" style="float: right;">+ ADD</button></a> &nbsp;
+                            <h4 class="card-title d-inline-block"><b style="font-weight: 500;">Students</b></h4>  <a routerLink="../ctaddstudent"><button class="btn btn-primary" style="float: right;">+ ADD</button></a> &nbsp;
                         </div>
                         <div class="card-body p-0">
                             <div class="table-responsive">                        
