--- a/src/app/students/approvedleave/approvedleave.component.html
+++ b/src/app/students/approvedleave/approvedleave.component.html
@@ -6,7 +6,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <h4 class="card-title d-inline-block"><b>Approved Leave</b></h4>
+                    <h4 class="card-title d-inline-block"><b style="font-weight: 500;">Approved Leave</b></h4>
                 </div>
 
                 <div class="row">
@@ -50,31 +50,6 @@
                                                             style="color: green"></i>
                                                 </td>
                                             </tr>
-
-                                            <tr>
-                                                <td>asd</td>
-                                                <td>12-Dec-2022</td>
-                                                <td>12-Dec-2022</td>
-                                                <td>hello my name is devesh sheth</td>
-                                                <td><span class="approve">Approved</span></td>
-                                                <td>
-                                                   <i class="fas fa-check"
-                                                            style="color: green"></i>
-                                                </td>
-                                            </tr>
-
-                                            <tr>
-                                                <td>asd</td>
-                                                <td>12-Dec-2022</td>
-                                                <td>12-Dec-2022</td>
-                                                <td>hello my name is devesh sheth</td>
-                                                <td><span class="approve">Approved</span></td>
-                                                <td>
-                                                   <i class="fas fa-check"
-                                                            style="color: green"></i>
-                                                </td>
-                                            </tr>
-
 
                                         </tbody>
                                     </table>
