--- a/src/app/students/dashboard/dashboard.component.html
+++ b/src/app/students/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <h4 class="card-title d-inline-block"><b>Student Dashboard</b></h4>
+                    <h4 class="card-title d-inline-block"><b style="font-weight: 500;">Student Dashboard</b></h4>
                 </div>
                 <div class="row">
                     <div class="col">
@@ -56,7 +56,7 @@
                     <div class="col-12 col-md-6 col-lg-4 col-xl-12">
                         <div class="card">
                             <div class="card-header">
-                                <h4 class="card-title d-inline-block">Pending Leave</h4> <a routerLink="../pendingleave"
+                                <h4 class="card-title d-inline-block"><b style="font-weight: 500;">Pending Leave</b></h4> <a routerLink="../stupendingleave"
                                     class="btn btn-primary float-right">View all</a>
                             </div>
                             <div class="card-body p-0">
@@ -73,18 +73,6 @@
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr>
-                                                <td>asd</td>
-                                                <td>12-Dec-2022</td>
-                                                <td>12-Dec-2022</td>
-
-                                                <td>hello my name is devesh sheth</td>
-                                                <td><span class="pending">Pending</span></td>
-                                                <td>
-                                                    <i class="fas fa-trash-alt"
-                                                        style="color: red;font-size: larger;"></i>
-                                                </td>
-                                            </tr>
 
                                             <tr>
                                                 <td>asd</td>
@@ -112,31 +100,6 @@
                                                 </td>
                                             </tr>
 
-                                            <tr>
-                                                <td>asd</td>
-                                                <td>12-Dec-2022</td>
-                                                <td>12-Dec-2022</td>
-
-                                                <td>hello my name is devesh sheth</td>
-                                                <td><span class="pending">Pending</span></td>
-                                                <td>
-                                                    <i class="fas fa-trash-alt"
-                                                        style="color: red;font-size: larger;"></i>
-                                                </td>
-                                            </tr>
-
-                                            <tr>
-                                                <td>asd</td>
-                                                <td>12-Dec-2022</td>
-                                                <td>12-Dec-2022</td>
-
-                                                <td>hello my name is devesh sheth</td>
-                                                <td><span class="pending">Pending</span></td>
-                                                <td>
-                                                    <i class="fas fa-trash-alt"
-                                                        style="color: red;font-size: larger;"></i>
-                                                </td>
-                                            </tr>
                                         </tbody>
                                     </table>
                                 </div>
@@ -150,7 +113,7 @@
                     <div class="col-12 col-md-6 col-lg-4 col-xl-12">
                         <div class="card">
                             <div class="card-header">
-                                <h4 class="card-title d-inline-block">Approved Leave</h4> <a routerLink="../pendingleave"
+                                <h4 class="card-title d-inline-block"><b style="font-weight: 500;">Approved Leave</b></h4> <a routerLink="../stuapprovedleave"
                                     class="btn btn-primary float-right">View all</a>
                             </div>
                             <div class="card-body p-0">
@@ -193,44 +156,7 @@
                                                 </td>
                                             </tr>
 
-                                            <tr>
-                                                <td>asd</td>
-                                                <td>12-Dec-2022</td>
-                                                <td>12-Dec-2022</td>
-
-                                                <td>hello my name is devesh sheth</td>
-                                                <td><span class="approve">Approved</span></td>
-                                                <td>
-                                                   <i class="fas fa-check"
-                                                            style="color: green"></i>
-                                                </td>
-                                            </tr>
-
-                                            <tr>
-                                                <td>asd</td>
-                                                <td>12-Dec-2022</td>
-                                                <td>12-Dec-2022</td>
-
-                                                <td>hello my name is devesh sheth</td>
-                                                <td><span class="approve">Approved</span></td>
-                                                <td>
-                                                   <i class="fas fa-check"
-                                                            style="color: green"></i>
-                                                </td>
-                                            </tr>
-
-                                            <tr>
-                                                <td>asd</td>
-                                                <td>12-Dec-2022</td>
-                                                <td>12-Dec-2022</td>
-
-                                                <td>hello my name is devesh sheth</td>
-                                                <td><span class="approve">Approved</span></td>
-                                                <td>
-                                                   <i class="fas fa-check"
-                                                            style="color: green"></i>
-                                                </td>
-                                            </tr>
+                                           
                                         </tbody>
                                     </table>
                                 </div>
