--- a/src/app/students/profile/profile.component.html
+++ b/src/app/students/profile/profile.component.html
@@ -5,7 +5,7 @@
         <div class="content">
             <div class="row">
                 <div class="col-sm-7 col-6">
-                    <h4 class="page-title">My Profile</h4>
+                    <h4 class="page-title"><b style="font-weight: 500;">My Profile</b></h4>
                 </div>
 
                 
@@ -26,7 +26,7 @@
                                             <h3 class="user-name m-t-0 mb-0">Full Name</h3>
                                             <small class="text-muted">Email</small>
                                             <div class="staff-id">Phone no</div>
-                                            <div class="staff-msg"><a routerLink="../leaverequest" class="btn btn-primary">Leave Request</a>
+                                            <div class="staff-msg"><a routerLink="../stuleaverequest" class="btn btn-primary">Leave Request</a>
                                                     </div>
                                         </div>
                                     </div>
