--- a/src/app/admin/department/department.component.html
+++ b/src/app/admin/department/department.component.html
@@ -4,41 +4,41 @@
     <div class="page-wrapper">
         <div class="content">
 
-            <div class="modal fade" id="myModal" role="dialog">
-                <div class="modal-dialog">
+            <form [formGroup]="myDepartmentForm" (ngSubmit)="submit()">
+                <div id="myModal" class="modal fade" role="dialog">
+                    <div class="modal-dialog">
 
-                    <!-- Modal content-->
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal"
-                                style="float: right;">&times;</button>
-                            
-                        </div>
-                        
-                        <div class="modal-body">
-                            <form>
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h4 class="modal-title"><b style="font-weight: 500;">Department Form</b></h4>
+                            </div>
+                            <div class="modal-body">
+
                                 <div class="form-group">
                                     <label>Department Name <span class="text-danger">*</span></label>
-
-                                    <input class="form-control datetimepicker" type="text">
+                                    <input class="form-control" type="text" formControlName="departmentname">
                                 </div>
-                            </form>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-danger float-right" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary float-right" data-dismiss="modal">Submit</button>
-                        </div>
-                    </div>
 
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-danger" data-toggle="modal"
+                                    data-dismiss="modal" data-target="#myModal">Close</button>
+                                <button type="submit" value="submit" class="btn btn-primary" data-toggle="modal"
+                                    data-target="#myModal">Save</button>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
-            </div>
+            </form>
+
 
             <div class="row">
                 <div class="col-md-12">
                     <div class="card">
 
                         <div class="card-header">
-                            <h4 class="card-title d-inline-block">Department</h4> <button class="btn btn-primary float-right"
+                            <h4 class="card-title d-inline-block"><b style="font-weight: 500;"> Department</b></h4> <button class="btn btn-primary float-right"
                                 data-toggle="modal" data-target="#myModal">Add
                                 Department</button>
                         </div>
@@ -49,6 +49,7 @@
                                     <thead>
                                         <tr>
                                             <th>Department Name</th>
+                                            <th>Status</th>
                                             <th>Action</th>
                                         </tr>
                                     </thead>
@@ -56,12 +57,34 @@
                                         <tr>
                                             <td>Admin</td>
                                             <td>
+                                                <div class="dropdown action-label">
+                                                    <a class="custom-badge status-green dropdown-toggle" href="#" data-toggle="dropdown" aria-expanded="false">
+                                                        Active
+                                                    </a>
+                                                    <div class="dropdown-menu dropdown-menu-right" x-placement="bottom-end" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(103px, 22px, 0px);">
+                                                        <a href="#" class="dropdown-item">Active</a>
+                                                        <a href="#" class="dropdown-item">Inactive</a>
+                                                    </div>
+                                                </div>
+                                            </td>
+                                            <td>
                                                 <a href=""> <i class="fas fa-edit" style="color: lightseagreen;"></i> </a> | <a href=""> <i class="fas fa-trash-alt" style="color: red;"></i> </a>
                                             </td>
                                         </tr>
 
                                         <tr>
                                             <td>Admin</td>
+                                            <td>
+                                                <div class="dropdown action-label">
+                                                    <a class="custom-badge status-red dropdown-toggle" href="#" data-toggle="dropdown" aria-expanded="false">
+                                                        InActive
+                                                    </a>
+                                                    <div class="dropdown-menu dropdown-menu-right" x-placement="bottom-end" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(103px, 22px, 0px);">
+                                                        <a href="#" class="dropdown-item">Active</a>
+                                                        <a href="#" class="dropdown-item">Inactive</a>
+                                                    </div>
+                                                </div>
+                                            </td>
                                             <td>
                                                 <a href=""> <i class="fas fa-edit" style="color: lightseagreen;"></i> </a> | <a href=""> <i class="fas fa-trash-alt" style="color: red;"></i> </a>
                                             </td>
