--- a/src/app/admin/users/edituser/edituser.component.html
+++ b/src/app/admin/users/edituser/edituser.component.html
@@ -12,20 +12,20 @@
                         </div><br>
                         <div class="card-body p-0">
                             <div class="container">
-                                <form>
+                                <form [formGroup]="myUserEditForm" (ngSubmit)="submit()">
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label>Full Name <span class="text-danger">*</span></label>
 
-                                                <input class="form-control datetimepicker" type="text">
+                                                <input class="form-control" type="text" formControlName="fullname">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label>Phone Number <span class="text-danger">*</span></label>
 
-                                                <input class="form-control datetimepicker" type="text">
+                                                <input class="form-control" type="text" formControlName="phno">
                                             </div>
                                         </div>
                                     </div>
@@ -35,7 +35,7 @@
                                             <div class="form-group">
                                                 <label>Birth Date <span class="text-danger">*</span></label>
 
-                                                <input class="form-control datetimepicker" type="date">
+                                                <input class="form-control" type="date" formControlName="birthdate">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
@@ -43,8 +43,8 @@
                                             <div class="form-group">
                                                 <label>Gender <span class="text-danger">*</span></label>
                                                <br>
-                                                <input type="radio" name="gender" value="male"> Male &nbsp;&nbsp;
-                                                <input type="radio" name="gender" value="female"> Female
+                                                <input type="radio" value="male" formControlName="gender"> Male &nbsp;&nbsp;
+                                                <input type="radio" value="female" formControlName="gender"> Female
                                             </div>
                                         </div>
                                     </div>
@@ -54,14 +54,14 @@
                                             <div class="form-group">
                                                 <label>Email <span class="text-danger">*</span></label>
 
-                                                <input class="form-control datetimepicker" type="email">
+                                                <input class="form-control" type="email" formControlName="email">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label>Password <span class="text-danger">*</span></label>
 
-                                                <input class="form-control datetimepicker" type="password">
+                                                <input class="form-control" type="password" formControlName="password">
                                             </div>
                                         </div>
                                     </div>
@@ -69,7 +69,7 @@
                                     <div class="form-group">
                                         <label>Address <span class="text-danger">*</span></label>
 
-                                        <input class="form-control datetimepicker" type="text">
+                                        <input class="form-control" type="text" formControlName="address">
                                     </div>
 
 
@@ -78,14 +78,14 @@
                                             <div class="form-group">
                                                 <label>State <span class="text-danger">*</span></label>
 
-                                                <input class="form-control datetimepicker" type="text">
+                                                <input class="form-control" type="text" formControlName="state">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label>City <span class="text-danger">*</span></label>
 
-                                                <input class="form-control datetimepicker" type="text">
+                                                <input class="form-control" type="text" formControlName="city">
                                             </div>
                                         </div>
                                     </div>
@@ -96,14 +96,14 @@
                                             <div class="form-group">
                                                 <label>Pincode <span class="text-danger">*</span></label>
 
-                                                <input class="form-control datetimepicker" type="text">
+                                                <input class="form-control datetimepicker" type="text" formControlName="pincode">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label>Role <span class="text-danger">*</span></label>
 
-                                                <select class="form-control">
+                                                <select class="form-control" formControlName="role">
                                                     <option>-- Select --</option>
                                                     <option>Admin</option>
                                                     <option>Faculty</option>
@@ -120,7 +120,7 @@
                                             <div class="form-group">
                                                 <label>Department <span class="text-danger">*</span></label>
 
-                                                <select class="form-control">
+                                                <select class="form-control" formControlName="department">
                                                     <option>-- Select --</option>
                                                     <option>Option 1</option>
                                                     <option>Option 2</option>
@@ -133,7 +133,7 @@
                                             <div class="form-group">
                                                 <label>Status <span class="text-danger">*</span></label>
 
-                                                <select class="form-control">
+                                                <select class="form-control" formControlName="status">
                                                     <option>-- Select --</option>
                                                     <option>Active</option>
                                                     <option>Hold</option>
@@ -146,7 +146,7 @@
 
                                 
                                     <div class="m-t-20 text-center">
-                                        <button class="btn btn-primary submit-btn">Submit</button>
+                                        <button type="submit" class="btn btn-primary submit-btn">Submit</button>
                                     </div> <br>
                                 </form>
                             </div>
