--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,23 +2,20 @@
     <div class="account-page">
         <div class="account-center">
             <div class="account-box">
-                <form action="http://dreamguys.co.in/preclinic/template/index.html" class="form-signin">
+                <form [formGroup]="myLoginForm" (ngSubmit)="submit()" class="form-signin">
                     <div class="account-logo">
-                        <a href="index-2.html"><img src="assets/img/logo-dark.png" alt=""></a>
+                        <a routerLink="/"><img src="assets/img/logo-dark.png" alt=""></a>
                     </div>
                     <div class="form-group">
                         <label>Username or Email</label>
-                        <input type="text" autofocus="" class="form-control">
+                        <input type="text" autofocus="" class="form-control" formControlName="username">
                     </div>
                     <div class="form-group">
                         <label>Password</label>
-                        <input type="password" class="form-control">
+                        <input type="password" class="form-control" formControlName="password">
                     </div>
-                    <!-- <div class="form-group text-right">
-                        <a href="forgot-password.html">Forgot your password?</a>
-                    </div> -->
                     <div class="form-group text-center">
-                        <a routerLink="/studashboard"><button type="submit" class="btn btn-primary account-btn">Login</button></a>
+                        <button type="submit" class="btn btn-primary account-btn">Login</button>
                     </div>
                     
                 </form>
