--- a/src/app/students/leaverequest/leaverequest.component.html
+++ b/src/app/students/leaverequest/leaverequest.component.html
@@ -9,31 +9,31 @@
                     <div class="card">
 
                         <div class="card-header">
-                            <h4 class="card-title d-inline-block">Leave Request</h4> 
+                            <h4 class="card-title d-inline-block"><b style="font-weight: 500;">Leave Request</b></h4>
                         </div><br>
                         <div class="card-body p-0">
                             <div class="container">
-                                <form>
+                                <form [formGroup]="myLeaveForm" (ngSubmit)="submit()">
                                     <div class="form-group">
                                         <label>Leave Type <span class="text-danger">*</span></label>
 
-                                        <input class="form-control datetimepicker" type="text">
+                                        <input class="form-control" type="text" formControlName="leavetype">
                                     </div>
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label>From <span class="text-danger">*</span></label>
-                                                <div class="cal-icon">
-                                                    <input class="form-control datetimepicker" type="date">
-                                                </div>
+
+                                                <input class="form-control" type="date" formControlName="leavefrom">
+
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label>To <span class="text-danger">*</span></label>
-                                                <div class="cal-icon">
-                                                    <input class="form-control datetimepicker" type="date">
-                                                </div>
+
+                                                <input class="form-control" type="date" formControlName="leaveto">
+
                                             </div>
                                         </div>
                                     </div>
@@ -41,13 +41,14 @@
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label>Number of days <span class="text-danger">*</span></label>
-                                                <input class="form-control" readonly="" type="text">
+                                                <input class="form-control" readonly="" type="text" value="5"
+                                                    formControlName="noofdays">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label>Send To <span class="text-danger">*</span></label>
-                                                <select class="form-control">
+                                                <select class="form-control" formControlName="sendto">
                                                     <option>-- Select --</option>
                                                     <option>Option 1</option>
                                                     <option>Option 2</option>
@@ -60,10 +61,10 @@
                                     </div>
                                     <div class="form-group">
                                         <label>Leave Reason <span class="text-danger">*</span></label>
-                                        <textarea rows="4" cols="5" class="form-control"></textarea>
+                                        <textarea rows="4" cols="5" class="form-control" formControlName="leavereason"></textarea>
                                     </div>
                                     <div class="m-t-20 text-center">
-                                        <button class="btn btn-primary submit-btn">Send Leave Request</button>
+                                        <button type="submit" class="btn btn-primary submit-btn">Send Leave Request</button>
                                     </div> <br>
                                 </form>
                             </div>
