--- a/src/app/students/leaves/leaves.component.html
+++ b/src/app/students/leaves/leaves.component.html
@@ -6,7 +6,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <h4 class="card-title d-inline-block"><b>Approved Leave</b></h4>
+                    <h4 class="card-title d-inline-block"><b style="font-weight: 500;">Leaves</b></h4>
                 </div>
 
                 <div class="row">
