--- a/src/app/students/pendingleave/pendingleave.component.html
+++ b/src/app/students/pendingleave/pendingleave.component.html
@@ -6,7 +6,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <h4 class="card-title d-inline-block"><b>Approved Leave</b></h4>
+                    <h4 class="card-title d-inline-block"><b style="font-weight: 500;">Pending Leave</b></h4>
                 </div>
 
                 <div class="row">
@@ -52,33 +52,6 @@
                                                             class="fas fa-trash-alt" style="color: red;"></i> </a>
                                                 </td>
                                             </tr>
-
-                                            <tr>
-                                                <td>asd</td>
-                                                <td>12-Dec-2022</td>
-                                                <td>12-Dec-2022</td>
-                                                <td>hello my name is devesh sheth</td>
-                                                <td><span class="pending">Pending</span></td>
-                                                <td>
-                                                    <a href=""> <i class="fas fa-edit"
-                                                            style="color: lightseagreen;"></i> </a> | <a href=""> <i
-                                                            class="fas fa-trash-alt" style="color: red;"></i> </a>
-                                                </td>
-                                            </tr>
-
-                                            <tr>
-                                                <td>asd</td>
-                                                <td>12-Dec-2022</td>
-                                                <td>12-Dec-2022</td>
-                                                <td>hello my name is devesh sheth</td>
-                                                <td><span class="pending">Pending</span></td>
-                                                <td>
-                                                    <a href=""> <i class="fas fa-edit"
-                                                            style="color: lightseagreen;"></i> </a> | <a href=""> <i
-                                                            class="fas fa-trash-alt" style="color: red;"></i> </a>
-                                                </td>
-                                            </tr>
-
 
                                         </tbody>
                                     </table>
