--- a/src/app/students/rejectedleave/rejectedleave.component.html
+++ b/src/app/students/rejectedleave/rejectedleave.component.html
@@ -37,7 +37,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <h4 class="card-title d-inline-block"><b>Approved Leave</b></h4>
+                    <h4 class="card-title d-inline-block"><b style="font-weight: 500;">Rejected Leave</b></h4>
                 </div>
 
                 <div class="row">
