--- a/src/app/students/stuheader/stuheader.component.html
+++ b/src/app/students/stuheader/stuheader.component.html
@@ -20,8 +20,8 @@
            
         </li>
 
-        <li class="nav-item dropdown d-none d-sm-block">
-            <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown"><i class="fas fa-power-off"></i></a>
+        <li class="nav-item d-none d-sm-block">
+            <a routerLink="/" class="nav-link"><i class="fas fa-power-off"></i></a>
         </li>&nbsp;&nbsp;
        
     </ul>
